src/objects/CP_Projects__c.object
<CustomObject>
    <fields>
        <fullName>Account_Details_Sent_to_Client__c</fullName>
        <description>Date on which the welcome email, Log-in and relevant information for the customer to start transaction is sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on which the welcome email, Log-in and relevant information for the customer to start transaction is sent.</inlineHelpText>
        <label>Account Details Sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Assigned_Date__c</fullName>
        <description>Date Account Management takes ownership of the account/CP project</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Account Management takes ownership of the account/CP project</inlineHelpText>
        <label>Account Manager Assigned - Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Assigned_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Account Manager allocated to the account</description>
        <inlineHelpText>Name of Account Manager allocated to the account</inlineHelpText>
        <label>Account Manager Assigned - Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Mgr_Assigned_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acct Mgr Assigned - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acct_Mgr_Assigned_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acct Mgr Assigned - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acct_Mgr_Assigned_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Acct Mgr Assigned - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <formula>Opportunity__r.Annual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Cycles_Successfully_Complete__c</fullName>
        <description>The date at which 2 cycles billing cycles have ran without any customer issues or defects.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date at which 2 cycles billing cycles have ran without any customer issues or defects.</inlineHelpText>
        <label>Billing Cycles Successfully Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Project_Approved__c</fullName>
        <formula>Opportunity__r.CP_Project_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Project Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complete Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Milestone__c</fullName>
        <label>Current Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SE Introduction</fullName>
                </value>
                <value>
                    <fullName>Demo Environment</fullName>
                </value>
                <value>
                    <fullName>Discovery &amp; Requirements</fullName>
                </value>
                <value>
                    <fullName>Resource Allocation</fullName>
                </value>
                <value>
                    <fullName>Signed Contract from Legal</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Front End</fullName>
                </value>
                <value>
                    <fullName>IT Work</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Peer Review</fullName>
                </value>
                <value>
                    <fullName>Stabilization Complete</fullName>
                </value>
                <value>
                    <fullName>Account Manager Assigned</fullName>
                </value>
                <value>
                    <fullName>Handover Meeting</fullName>
                </value>
                <value>
                    <fullName>Implementation Complete</fullName>
                </value>
                <value>
                    <fullName>Ramp Plan Signed Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Readiness_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Readiness - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Readiness_Duration_Days__c</fullName>
        <formula>Implementation_Complete__c -  Customer_Readiness_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Implementation Complete - Customer Readiness Complete</inlineHelpText>
        <label>Customer Readiness Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Readiness_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Readiness Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Transaction_Actual__c</fullName>
        <description>Date at which the customer uses our system</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date at which the customer uses our system</inlineHelpText>
        <label>Date of First Transaction - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Transaction_Expected__c</fullName>
        <description>The date the customer expects to use the system to make their first transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the customer expects to use the system to make their first transaction.</inlineHelpText>
        <label>Date of First Transaction - Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Completed_Date__c</fullName>
        <description>Date demonstration was carried out.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date demonstration was carried out.</inlineHelpText>
        <label>Demo Completed - Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Completed_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of person conducting demonstration</description>
        <inlineHelpText>Name of person conducting demonstration</inlineHelpText>
        <label>Demo Completed - Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Environment_Complete__c</fullName>
        <formula>Opportunity__r.Demo_Environment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo Environment - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Environment_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Demo Environment - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Environment_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Demo Environment - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Required__c</fullName>
        <description>Entering a date indicates customer requires a demonstration and the date they require it.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Entering a date indicates customer requires a demonstration and the date they require it.</inlineHelpText>
        <label>Demo Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disc_Reqs_Complete__c</fullName>
        <formula>Opportunity__r.Discovery_Requirements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disc &amp; Reqs - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disc_Reqs_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disc &amp; Reqs - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disc_Reqs_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Disc &amp; Reqs - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Duration_Days__c</fullName>
        <formula>Ready_To_Move_Into_Implementation__c -   Discovery_Start_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ready to Move Into Implementation - Discovery Start Actual</inlineHelpText>
        <label>Discovery Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Start_Actual__c</fullName>
        <description>Date agreed with Client that the Discover process did start</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date agreed with Client that the Discover process did start</inlineHelpText>
        <label>Discovery Start - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Start_Due__c</fullName>
        <description>Date agreed with Client that the Discover process would start</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date agreed with Client that the Discover process would start</inlineHelpText>
        <label>Discovery Start - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_to_Date__c</fullName>
        <formula>IF(ISNULL(Implementation_Complete__c), TODAY() -  DATEVALUE(CreatedDate)  , Implementation_Complete__c - DATEVALUE(CreatedDate))</formula>
        <inlineHelpText>If Implementation Complete - Complete date is blank, it is calculated as the number of days between when this record was created and today. Otherwise, it is calculated as the number of days between Created Date and Implementation Complete - Complete</inlineHelpText>
        <label>Duration to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_End_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Front End - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Front_End_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Front End - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Front_End_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Front End - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Actual__c</fullName>
        <description>The date at which Account Management accepts the CP project into BAU</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date at which Account Management accepts the CP project into BAU</inlineHelpText>
        <label>Handover - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Handover - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Handover - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Expected__c</fullName>
        <description>Expected date of transition based on billing cycles, testing etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Expected date of transition based on billing cycles, testing etc.</inlineHelpText>
        <label>Handover - Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Handover - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Implementation Manager resource allocated to the CP project</description>
        <inlineHelpText>Name of Implementation Manager resource allocated to the CP project</inlineHelpText>
        <label>IM Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Work_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Work - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Work_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Work - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Work_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>IT Work - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Complete_Due__c</fullName>
        <description>Date on which Implementation Manager is schedule to commence Build/configuration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on which Implementation Manager is schedule to commence Build/configuration</inlineHelpText>
        <label>Implementation Complete - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Complete_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Implementation Complete - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Duration_Days__c</fullName>
        <formula>Implementation_Complete__c - Implementation_Kickoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Implementation Complete - Implementation Kickoff</inlineHelpText>
        <label>Implementation Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Kickoff__c</fullName>
        <description>Date on which Implementation Manager commences Build/configuration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on which Implementation Manager commences Build/configuration</inlineHelpText>
        <label>Implementation Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inception_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inception Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inception_Duration_Days__c</fullName>
        <formula>Inception_Complete__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inception Complete - Created Date</inlineHelpText>
        <label>Inception Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inception_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inception Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Log_During_Build_and_Test_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Documentation of the Defect / Issue Resolution Log is added to sfdc in Notes &amp; Attachments</description>
        <inlineHelpText>Documentation of the Defect / Issue Resolution Log is added to sfdc in Notes &amp; Attachments</inlineHelpText>
        <label>Issue Log During Build and Test Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Log_During_Customer_Readiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Log During Customer Readiness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Log_During_Stabilization_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defect / Issue Resolution Log is updated during the stabilization phase and added to SFDC in Notes &amp; Attachments</description>
        <inlineHelpText>Defect / Issue Resolution Log is updated during the stabilization phase and added to SFDC in Notes &amp; Attachments</inlineHelpText>
        <label>Issue Log During Stabilization Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Implementation_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard Implementation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Pipeline_Meeting__c</fullName>
        <description>Date at which new CP Project request is reviewed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date at which new CP Project request is reviewed.</inlineHelpText>
        <label>Onboarding Pipeline Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner_First_Name__c &amp; &quot; &quot; &amp; Opportunity__r.Owner_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Total_Net_FSR__c</fullName>
        <formula>Opportunity__r.Net_Full_Service_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total Net FSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Peer Review - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Peer Review - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Peer Review - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual assigned and responsible for conducting the peer review</description>
        <inlineHelpText>The individual assigned and responsible for conducting the peer review</inlineHelpText>
        <label>Peer Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processor_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processor - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processor_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processor - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processor_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Processor - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processor_Type__c</fullName>
        <description>Indicate the type of processor - TAG or Tsys</description>
        <inlineHelpText>Indicate the type of processor - TAG or Tsys</inlineHelpText>
        <label>Processor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSYS</fullName>
                </value>
                <value>
                    <fullName>TAG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Opportunity__r.Campaign_Program__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Age__c</fullName>
        <formula>IF(NOW() - CreatedDate &lt;= 45, &quot;45 Days or Less&quot;,
  IF(NOW()- CreatedDate &gt; 70, &quot;71 Days or More&quot;, &quot;46 to 70 Days&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Workbook_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Documentation of the Project Plan/Worksheet added to SFDC in Notes &amp; Attachments</description>
        <inlineHelpText>Documentation of the Project Plan/Worksheet added to SFDC in Notes &amp; Attachments</inlineHelpText>
        <label>Project Plan / Workbook Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual assigned and responsible for conducting the QA</description>
        <inlineHelpText>The individual assigned and responsible for conducting the QA</inlineHelpText>
        <label>QA Assigned</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Assurance_Complete__c</fullName>
        <description>The date of which the QA was actually completed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date of which the QA was actually completed</inlineHelpText>
        <label>Quality Assurance - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Assurance_Due__c</fullName>
        <description>The expected date of which the assigned individual will commence the work</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The expected date of which the assigned individual will commence the work</inlineHelpText>
        <label>Quality Assurance - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <description>NO LONGER USED</description>
        <inlineHelpText>NO LONGER USED</inlineHelpText>
        <label>RAG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ramp_Plan_Signed_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ramp Plan Signed - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ramp_Plan_Signed_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ramp Plan Signed - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ramp_Plan_Signed_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Ramp Plan Signed - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ramp_to_BAU_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ramp to BAU Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ready_To_Move_Into_Implementation__c</fullName>
        <description>Check point to make sure a signed contract, signed SOW and a signed credit worksheet are in Notes &amp; Attachments</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Check point to make sure a signed contract, signed SOW and a signed credit worksheet are in Notes &amp; Attachments</inlineHelpText>
        <label>Ready To Move Into Implementation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Allocated_Complete__c</fullName>
        <formula>Opportunity__r.Resource_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Allocated - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Allocated_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resource Allocated - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Allocated_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Resource Allocated - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SE_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of assigned Sales/Solution Engineer</description>
        <inlineHelpText>Name of assigned Sales/Solution Engineer</inlineHelpText>
        <label>SE Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SE_Introduction_Complete__c</fullName>
        <formula>Opportunity__r.SE_Introduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Introduction - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SE_Introduction_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SE Introduction - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SE_Introduction_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>SE Introduction - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_Complete__c</fullName>
        <formula>Opportunity__r.Signed_Contract_from_Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Contract - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signed Contract - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Signed Contract - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Credit_Worksheets_Attached__c</fullName>
        <description>Documentation of the Signed Credit Worksheet  added to sfdc in Notes &amp; Attachments</description>
        <formula>Opportunity__r.Signed_Credit_Worksheet_Attached__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Documentation of the Signed Credit Worksheet  added to sfdc in Notes &amp; Attachments</inlineHelpText>
        <label>Signed Credit Worksheets Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Statement_of_Work_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Documentation of the SOW  added to SFDC in Notes &amp; Attachments</description>
        <inlineHelpText>Documentation of the SOW  added to SFDC in Notes &amp; Attachments</inlineHelpText>
        <label>Signed Statement of Work Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stabilization_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stabilization - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stabilization_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stabilization - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stabilization_Duration_Days__c</fullName>
        <formula>Billing_Cycles_Successfully_Complete__c  - Customer_Readiness_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing Cycles Successfully Complete - Customer Readiness Complete</inlineHelpText>
        <label>Stabilization Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stabilization_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Stabilization - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stabilization_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stabilization Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>